# math-lang

./: Cargo.toml  README.md  il.mlang
benches/: interpreter.rs  vm.rs
src/: ast.rs  grammar.pest  interpreter.rs  lib.rs  operations.rs  parser.rs
src/vm/: bytecode.rs  mod.rs  opcode.rs
