[package]
name = "math-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "2.0.0-rc.3"
clap = { version = "4.3.19", features = ["derive"], optional = true }
pest = { version = "2.7.1", features = ["pretty-print"] }
pest_derive = "2.7.1"
rustyline = { version = "12.0.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "vm"
harness = false

[[bench]]
name = "interpreter"
harness = false

[features]
repl = ["rustyline"]
cli = ["clap"]

[[bin]]
name = "repl"
required-features = ["repl"]

[[bin]]
name = "math-vm"
required-features = ["cli"]

[[bin]]
name = "mathc"
required-features = ["cli"]
